@@ -1171,137 +1171,15 @@ FLOAT_T sc_pan_table[128] =
 
 uint8 velocity_table[128];
 
-FLOAT_T attack_vol_table[1024] = 
+FLOAT_T attack_vol_table[1024];
+
+void init_attack_vol_table(void)
 {
-    0.000000, 0.000978, 0.001955, 0.002933, 0.003910, 0.004888, 0.005865, 0.006843, 
-    0.007820, 0.008798, 0.009775, 0.010753, 0.011730, 0.012708, 0.013685, 0.014663, 
-    0.015640, 0.016618, 0.017595, 0.018573, 0.019550, 0.020528, 0.021505, 0.022483, 
-    0.023460, 0.024438, 0.025415, 0.026393, 0.027370, 0.028348, 0.029326, 0.030303, 
-    0.031281, 0.032258, 0.033236, 0.034213, 0.035191, 0.036168, 0.037146, 0.038123, 
-    0.039101, 0.040078, 0.041056, 0.042033, 0.043011, 0.043988, 0.044966, 0.045943, 
-    0.046921, 0.047898, 0.048876, 0.049853, 0.050831, 0.051808, 0.052786, 0.053763, 
-    0.054741, 0.055718, 0.056696, 0.057674, 0.058651, 0.059629, 0.060606, 0.061584, 
-    0.062561, 0.063539, 0.064516, 0.065494, 0.066471, 0.067449, 0.068426, 0.069404, 
-    0.070381, 0.071359, 0.072336, 0.073314, 0.074291, 0.075269, 0.076246, 0.077224, 
-    0.078201, 0.079179, 0.080156, 0.081134, 0.082111, 0.083089, 0.084066, 0.085044, 
-    0.086022, 0.086999, 0.087977, 0.088954, 0.089932, 0.090909, 0.091887, 0.092864, 
-    0.093842, 0.094819, 0.095797, 0.096774, 0.097752, 0.098729, 0.099707, 0.100684, 
-    0.101662, 0.102639, 0.103617, 0.104594, 0.105572, 0.106549, 0.107527, 0.108504, 
-    0.109482, 0.110459, 0.111437, 0.112414, 0.113392, 0.114370, 0.115347, 0.116325, 
-    0.117302, 0.118280, 0.119257, 0.120235, 0.121212, 0.122190, 0.123167, 0.124145, 
-    0.125122, 0.126100, 0.127077, 0.128055, 0.129032, 0.130010, 0.130987, 0.131965, 
-    0.132942, 0.133920, 0.134897, 0.135875, 0.136852, 0.137830, 0.138807, 0.139785, 
-    0.140762, 0.141740, 0.142717, 0.143695, 0.144673, 0.145650, 0.146628, 0.147605, 
-    0.148583, 0.149560, 0.150538, 0.151515, 0.152493, 0.153470, 0.154448, 0.155425, 
-    0.156403, 0.157380, 0.158358, 0.159335, 0.160313, 0.161290, 0.162268, 0.163245, 
-    0.164223, 0.165200, 0.166178, 0.167155, 0.168133, 0.169110, 0.170088, 0.171065, 
-    0.172043, 0.173021, 0.173998, 0.174976, 0.175953, 0.176931, 0.177908, 0.178886, 
-    0.179863, 0.180841, 0.181818, 0.182796, 0.183773, 0.184751, 0.185728, 0.186706, 
-    0.187683, 0.188661, 0.189638, 0.190616, 0.191593, 0.192571, 0.193548, 0.194526, 
-    0.195503, 0.196481, 0.197458, 0.198436, 0.199413, 0.200391, 0.201369, 0.202346, 
-    0.203324, 0.204301, 0.205279, 0.206256, 0.207234, 0.208211, 0.209189, 0.210166, 
-    0.211144, 0.212121, 0.213099, 0.214076, 0.215054, 0.216031, 0.217009, 0.217986, 
-    0.218964, 0.219941, 0.220919, 0.221896, 0.222874, 0.223851, 0.224829, 0.225806, 
-    0.226784, 0.227761, 0.228739, 0.229717, 0.230694, 0.231672, 0.232649, 0.233627, 
-    0.234604, 0.235582, 0.236559, 0.237537, 0.238514, 0.239492, 0.240469, 0.241447, 
-    0.242424, 0.243402, 0.244379, 0.245357, 0.246334, 0.247312, 0.248289, 0.249267, 
-    0.250244, 0.251222, 0.252199, 0.253177, 0.254154, 0.255132, 0.256109, 0.257087, 
-    0.258065, 0.259042, 0.260020, 0.260997, 0.261975, 0.262952, 0.263930, 0.264907, 
-    0.265885, 0.266862, 0.267840, 0.268817, 0.269795, 0.270772, 0.271750, 0.272727, 
-    0.273705, 0.274682, 0.275660, 0.276637, 0.277615, 0.278592, 0.279570, 0.280547, 
-    0.281525, 0.282502, 0.283480, 0.284457, 0.285435, 0.286413, 0.287390, 0.288368, 
-    0.289345, 0.290323, 0.291300, 0.292278, 0.293255, 0.294233, 0.295210, 0.296188, 
-    0.297165, 0.298143, 0.299120, 0.300098, 0.301075, 0.302053, 0.303030, 0.304008, 
-    0.304985, 0.305963, 0.306940, 0.307918, 0.308895, 0.309873, 0.310850, 0.311828, 
-    0.312805, 0.313783, 0.314761, 0.315738, 0.316716, 0.317693, 0.318671, 0.319648, 
-    0.320626, 0.321603, 0.322581, 0.323558, 0.324536, 0.325513, 0.326491, 0.327468, 
-    0.328446, 0.329423, 0.330401, 0.331378, 0.332356, 0.333333, 0.334311, 0.335288, 
-    0.336266, 0.337243, 0.338221, 0.339198, 0.340176, 0.341153, 0.342131, 0.343109, 
-    0.344086, 0.345064, 0.346041, 0.347019, 0.347996, 0.348974, 0.349951, 0.350929, 
-    0.351906, 0.352884, 0.353861, 0.354839, 0.355816, 0.356794, 0.357771, 0.358749, 
-    0.359726, 0.360704, 0.361681, 0.362659, 0.363636, 0.364614, 0.365591, 0.366569, 
-    0.367546, 0.368524, 0.369501, 0.370479, 0.371457, 0.372434, 0.373412, 0.374389, 
-    0.375367, 0.376344, 0.377322, 0.378299, 0.379277, 0.380254, 0.381232, 0.382209, 
-    0.383187, 0.384164, 0.385142, 0.386119, 0.387097, 0.388074, 0.389052, 0.390029, 
-    0.391007, 0.391984, 0.392962, 0.393939, 0.394917, 0.395894, 0.396872, 0.397849, 
-    0.398827, 0.399804, 0.400782, 0.401760, 0.402737, 0.403715, 0.404692, 0.405670, 
-    0.406647, 0.407625, 0.408602, 0.409580, 0.410557, 0.411535, 0.412512, 0.413490, 
-    0.414467, 0.415445, 0.416422, 0.417400, 0.418377, 0.419355, 0.420332, 0.421310, 
-    0.422287, 0.423265, 0.424242, 0.425220, 0.426197, 0.427175, 0.428152, 0.429130, 
-    0.430108, 0.431085, 0.432063, 0.433040, 0.434018, 0.434995, 0.435973, 0.436950, 
-    0.437928, 0.438905, 0.439883, 0.440860, 0.441838, 0.442815, 0.443793, 0.444770, 
-    0.445748, 0.446725, 0.447703, 0.448680, 0.449658, 0.450635, 0.451613, 0.452590, 
-    0.453568, 0.454545, 0.455523, 0.456500, 0.457478, 0.458456, 0.459433, 0.460411, 
-    0.461388, 0.462366, 0.463343, 0.464321, 0.465298, 0.466276, 0.467253, 0.468231, 
-    0.469208, 0.470186, 0.471163, 0.472141, 0.473118, 0.474096, 0.475073, 0.476051, 
-    0.477028, 0.478006, 0.478983, 0.479961, 0.480938, 0.481916, 0.482893, 0.483871, 
-    0.484848, 0.485826, 0.486804, 0.487781, 0.488759, 0.489736, 0.490714, 0.491691, 
-    0.492669, 0.493646, 0.494624, 0.495601, 0.496579, 0.497556, 0.498534, 0.499511, 
-    0.500489, 0.501466, 0.502444, 0.503421, 0.504399, 0.505376, 0.506354, 0.507331, 
-    0.508309, 0.509286, 0.510264, 0.511241, 0.512219, 0.513196, 0.514174, 0.515152, 
-    0.516129, 0.517107, 0.518084, 0.519062, 0.520039, 0.521017, 0.521994, 0.522972, 
-    0.523949, 0.524927, 0.525904, 0.526882, 0.527859, 0.528837, 0.529814, 0.530792, 
-    0.531769, 0.532747, 0.533724, 0.534702, 0.535679, 0.536657, 0.537634, 0.538612, 
-    0.539589, 0.540567, 0.541544, 0.542522, 0.543500, 0.544477, 0.545455, 0.546432, 
-    0.547410, 0.548387, 0.549365, 0.550342, 0.551320, 0.552297, 0.553275, 0.554252, 
-    0.555230, 0.556207, 0.557185, 0.558162, 0.559140, 0.560117, 0.561095, 0.562072, 
-    0.563050, 0.564027, 0.565005, 0.565982, 0.566960, 0.567937, 0.568915, 0.569892, 
-    0.570870, 0.571848, 0.572825, 0.573803, 0.574780, 0.575758, 0.576735, 0.577713, 
-    0.578690, 0.579668, 0.580645, 0.581623, 0.582600, 0.583578, 0.584555, 0.585533, 
-    0.586510, 0.587488, 0.588465, 0.589443, 0.590420, 0.591398, 0.592375, 0.593353, 
-    0.594330, 0.595308, 0.596285, 0.597263, 0.598240, 0.599218, 0.600196, 0.601173, 
-    0.602151, 0.603128, 0.604106, 0.605083, 0.606061, 0.607038, 0.608016, 0.608993, 
-    0.609971, 0.610948, 0.611926, 0.612903, 0.613881, 0.614858, 0.615836, 0.616813, 
-    0.617791, 0.618768, 0.619746, 0.620723, 0.621701, 0.622678, 0.623656, 0.624633, 
-    0.625611, 0.626588, 0.627566, 0.628543, 0.629521, 0.630499, 0.631476, 0.632454, 
-    0.633431, 0.634409, 0.635386, 0.636364, 0.637341, 0.638319, 0.639296, 0.640274, 
-    0.641251, 0.642229, 0.643206, 0.644184, 0.645161, 0.646139, 0.647116, 0.648094, 
-    0.649071, 0.650049, 0.651026, 0.652004, 0.652981, 0.653959, 0.654936, 0.655914, 
-    0.656891, 0.657869, 0.658847, 0.659824, 0.660802, 0.661779, 0.662757, 0.663734, 
-    0.664712, 0.665689, 0.666667, 0.667644, 0.668622, 0.669599, 0.670577, 0.671554, 
-    0.672532, 0.673509, 0.674487, 0.675464, 0.676442, 0.677419, 0.678397, 0.679374, 
-    0.680352, 0.681329, 0.682307, 0.683284, 0.684262, 0.685239, 0.686217, 0.687195, 
-    0.688172, 0.689150, 0.690127, 0.691105, 0.692082, 0.693060, 0.694037, 0.695015, 
-    0.695992, 0.696970, 0.697947, 0.698925, 0.699902, 0.700880, 0.701857, 0.702835, 
-    0.703812, 0.704790, 0.705767, 0.706745, 0.707722, 0.708700, 0.709677, 0.710655, 
-    0.711632, 0.712610, 0.713587, 0.714565, 0.715543, 0.716520, 0.717498, 0.718475, 
-    0.719453, 0.720430, 0.721408, 0.722385, 0.723363, 0.724340, 0.725318, 0.726295, 
-    0.727273, 0.728250, 0.729228, 0.730205, 0.731183, 0.732160, 0.733138, 0.734115, 
-    0.735093, 0.736070, 0.737048, 0.738025, 0.739003, 0.739980, 0.740958, 0.741935, 
-    0.742913, 0.743891, 0.744868, 0.745846, 0.746823, 0.747801, 0.748778, 0.749756, 
-    0.750733, 0.751711, 0.752688, 0.753666, 0.754643, 0.755621, 0.756598, 0.757576, 
-    0.758553, 0.759531, 0.760508, 0.761486, 0.762463, 0.763441, 0.764418, 0.765396, 
-    0.766373, 0.767351, 0.768328, 0.769306, 0.770283, 0.771261, 0.772239, 0.773216, 
-    0.774194, 0.775171, 0.776149, 0.777126, 0.778104, 0.779081, 0.780059, 0.781036, 
-    0.782014, 0.782991, 0.783969, 0.784946, 0.785924, 0.786901, 0.787879, 0.788856, 
-    0.789834, 0.790811, 0.791789, 0.792766, 0.793744, 0.794721, 0.795699, 0.796676, 
-    0.797654, 0.798631, 0.799609, 0.800587, 0.801564, 0.802542, 0.803519, 0.804497, 
-    0.805474, 0.806452, 0.807429, 0.808407, 0.809384, 0.810362, 0.811339, 0.812317, 
-    0.813294, 0.814272, 0.815249, 0.816227, 0.817204, 0.818182, 0.819159, 0.820137, 
-    0.821114, 0.822092, 0.823069, 0.824047, 0.825024, 0.826002, 0.826979, 0.827957, 
-    0.828935, 0.829912, 0.830890, 0.831867, 0.832845, 0.833822, 0.834800, 0.835777, 
-    0.836755, 0.837732, 0.838710, 0.839687, 0.840665, 0.841642, 0.842620, 0.843597, 
-    0.844575, 0.845552, 0.846530, 0.847507, 0.848485, 0.849462, 0.850440, 0.851417, 
-    0.852395, 0.853372, 0.854350, 0.855327, 0.856305, 0.857283, 0.858260, 0.859238, 
-    0.860215, 0.861193, 0.862170, 0.863148, 0.864125, 0.865103, 0.866080, 0.867058, 
-    0.868035, 0.869013, 0.869990, 0.870968, 0.871945, 0.872923, 0.873900, 0.874878, 
-    0.875855, 0.876833, 0.877810, 0.878788, 0.879765, 0.880743, 0.881720, 0.882698, 
-    0.883675, 0.884653, 0.885630, 0.886608, 0.887586, 0.888563, 0.889541, 0.890518, 
-    0.891496, 0.892473, 0.893451, 0.894428, 0.895406, 0.896383, 0.897361, 0.898338, 
-    0.899316, 0.900293, 0.901271, 0.902248, 0.903226, 0.904203, 0.905181, 0.906158, 
-    0.907136, 0.908113, 0.909091, 0.910068, 0.911046, 0.912023, 0.913001, 0.913978, 
-    0.914956, 0.915934, 0.916911, 0.917889, 0.918866, 0.919844, 0.920821, 0.921799, 
-    0.922776, 0.923754, 0.924731, 0.925709, 0.926686, 0.927664, 0.928641, 0.929619, 
-    0.930596, 0.931574, 0.932551, 0.933529, 0.934506, 0.935484, 0.936461, 0.937439, 
-    0.938416, 0.939394, 0.940371, 0.941349, 0.942326, 0.943304, 0.944282, 0.945259, 
-    0.946237, 0.947214, 0.948192, 0.949169, 0.950147, 0.951124, 0.952102, 0.953079, 
-    0.954057, 0.955034, 0.956012, 0.956989, 0.957967, 0.958944, 0.959922, 0.960899, 
-    0.961877, 0.962854, 0.963832, 0.964809, 0.965787, 0.966764, 0.967742, 0.968719, 
-    0.969697, 0.970674, 0.971652, 0.972630, 0.973607, 0.974585, 0.975562, 0.976540, 
-    0.977517, 0.978495, 0.979472, 0.980450, 0.981427, 0.982405, 0.983382, 0.984360, 
-    0.985337, 0.986315, 0.987292, 0.988270, 0.989247, 0.990225, 0.991202, 0.992180, 
-    0.993157, 0.994135, 0.995112, 0.996090, 0.997067, 0.998045, 0.999022, 1.000000, 
-};
+	int i;
+	
+	for (i = 0; i < 1024; i++)
+		attack_vol_table[i] = i / 1023.0;
+}
 
 int opt_velocity_table = 0;
 
@@ -1362,138 +1240,15 @@ FLOAT_T concave_table[128] = {
     0.524461, 0.552355, 0.585347, 0.625727, 0.677784, 0.751156, 0.876585, 1.000000, 
 };
 
-FLOAT_T sb_vol_table[1024] = 
-{
-    0.002770, 0.002786, 0.002802, 0.002818, 0.002835, 0.002851, 0.002867, 0.002884, 
-    0.002901, 0.002917, 0.002934, 0.002951, 0.002968, 0.002985, 0.003003, 0.003020, 
-    0.003037, 0.003055, 0.003073, 0.003090, 0.003108, 0.003126, 0.003144, 0.003162, 
-    0.003181, 0.003199, 0.003217, 0.003236, 0.003255, 0.003273, 0.003292, 0.003311, 
-    0.003330, 0.003350, 0.003369, 0.003388, 0.003408, 0.003428, 0.003447, 0.003467, 
-    0.003487, 0.003508, 0.003528, 0.003548, 0.003569, 0.003589, 0.003610, 0.003631, 
-    0.003652, 0.003673, 0.003694, 0.003715, 0.003737, 0.003758, 0.003780, 0.003802, 
-    0.003824, 0.003846, 0.003868, 0.003890, 0.003913, 0.003936, 0.003958, 0.003981, 
-    0.004004, 0.004027, 0.004050, 0.004074, 0.004097, 0.004121, 0.004145, 0.004169, 
-    0.004193, 0.004217, 0.004241, 0.004266, 0.004290, 0.004315, 0.004340, 0.004365, 
-    0.004390, 0.004416, 0.004441, 0.004467, 0.004493, 0.004519, 0.004545, 0.004571, 
-    0.004597, 0.004624, 0.004651, 0.004677, 0.004704, 0.004732, 0.004759, 0.004786, 
-    0.004814, 0.004842, 0.004870, 0.004898, 0.004926, 0.004955, 0.004983, 0.005012, 
-    0.005041, 0.005070, 0.005099, 0.005129, 0.005158, 0.005188, 0.005218, 0.005248, 
-    0.005278, 0.005309, 0.005339, 0.005370, 0.005401, 0.005433, 0.005464, 0.005495, 
-    0.005527, 0.005559, 0.005591, 0.005623, 0.005656, 0.005689, 0.005721, 0.005754, 
-    0.005788, 0.005821, 0.005855, 0.005888, 0.005922, 0.005957, 0.005991, 0.006026, 
-    0.006060, 0.006095, 0.006131, 0.006166, 0.006202, 0.006237, 0.006273, 0.006310, 
-    0.006346, 0.006383, 0.006419, 0.006457, 0.006494, 0.006531, 0.006569, 0.006607, 
-    0.006645, 0.006683, 0.006722, 0.006761, 0.006800, 0.006839, 0.006879, 0.006918, 
-    0.006958, 0.006998, 0.007039, 0.007079, 0.007120, 0.007161, 0.007203, 0.007244, 
-    0.007286, 0.007328, 0.007371, 0.007413, 0.007456, 0.007499, 0.007542, 0.007586, 
-    0.007630, 0.007674, 0.007718, 0.007762, 0.007807, 0.007852, 0.007898, 0.007943, 
-    0.007989, 0.008035, 0.008082, 0.008128, 0.008175, 0.008222, 0.008270, 0.008318, 
-    0.008366, 0.008414, 0.008463, 0.008511, 0.008561, 0.008610, 0.008660, 0.008710, 
-    0.008760, 0.008810, 0.008861, 0.008913, 0.008964, 0.009016, 0.009068, 0.009120, 
-    0.009173, 0.009226, 0.009279, 0.009333, 0.009386, 0.009441, 0.009495, 0.009550, 
-    0.009605, 0.009661, 0.009716, 0.009772, 0.009829, 0.009886, 0.009943, 0.010000, 
-    0.010058, 0.010116, 0.010174, 0.010233, 0.010292, 0.010351, 0.010411, 0.010471, 
-    0.010532, 0.010593, 0.010654, 0.010715, 0.010777, 0.010839, 0.010902, 0.010965, 
-    0.011028, 0.011092, 0.011156, 0.011220, 0.011285, 0.011350, 0.011416, 0.011482, 
-    0.011548, 0.011614, 0.011682, 0.011749, 0.011817, 0.011885, 0.011954, 0.012023, 
-    0.012092, 0.012162, 0.012232, 0.012303, 0.012374, 0.012445, 0.012517, 0.012589, 
-    0.012662, 0.012735, 0.012809, 0.012882, 0.012957, 0.013032, 0.013107, 0.013183, 
-    0.013259, 0.013335, 0.013412, 0.013490, 0.013568, 0.013646, 0.013725, 0.013804, 
-    0.013884, 0.013964, 0.014044, 0.014125, 0.014207, 0.014289, 0.014371, 0.014454, 
-    0.014538, 0.014622, 0.014706, 0.014791, 0.014876, 0.014962, 0.015049, 0.015136, 
-    0.015223, 0.015311, 0.015399, 0.015488, 0.015578, 0.015668, 0.015758, 0.015849, 
-    0.015940, 0.016032, 0.016125, 0.016218, 0.016312, 0.016406, 0.016501, 0.016596, 
-    0.016692, 0.016788, 0.016885, 0.016982, 0.017080, 0.017179, 0.017278, 0.017378, 
-    0.017478, 0.017579, 0.017681, 0.017783, 0.017885, 0.017989, 0.018093, 0.018197, 
-    0.018302, 0.018408, 0.018514, 0.018621, 0.018728, 0.018836, 0.018945, 0.019055, 
-    0.019165, 0.019275, 0.019387, 0.019498, 0.019611, 0.019724, 0.019838, 0.019953, 
-    0.020068, 0.020184, 0.020300, 0.020417, 0.020535, 0.020654, 0.020773, 0.020893, 
-    0.021014, 0.021135, 0.021257, 0.021380, 0.021503, 0.021627, 0.021752, 0.021878, 
-    0.022004, 0.022131, 0.022259, 0.022387, 0.022516, 0.022646, 0.022777, 0.022909, 
-    0.023041, 0.023174, 0.023308, 0.023442, 0.023578, 0.023714, 0.023851, 0.023988, 
-    0.024127, 0.024266, 0.024406, 0.024547, 0.024689, 0.024831, 0.024975, 0.025119, 
-    0.025264, 0.025410, 0.025556, 0.025704, 0.025852, 0.026002, 0.026152, 0.026303, 
-    0.026455, 0.026607, 0.026761, 0.026915, 0.027071, 0.027227, 0.027384, 0.027542, 
-    0.027701, 0.027861, 0.028022, 0.028184, 0.028347, 0.028510, 0.028675, 0.028840, 
-    0.029007, 0.029174, 0.029343, 0.029512, 0.029682, 0.029854, 0.030026, 0.030200, 
-    0.030374, 0.030549, 0.030726, 0.030903, 0.031081, 0.031261, 0.031441, 0.031623, 
-    0.031805, 0.031989, 0.032174, 0.032359, 0.032546, 0.032734, 0.032923, 0.033113, 
-    0.033304, 0.033497, 0.033690, 0.033884, 0.034080, 0.034277, 0.034475, 0.034674, 
-    0.034874, 0.035075, 0.035278, 0.035481, 0.035686, 0.035892, 0.036099, 0.036308, 
-    0.036517, 0.036728, 0.036940, 0.037154, 0.037368, 0.037584, 0.037801, 0.038019, 
-    0.038238, 0.038459, 0.038681, 0.038905, 0.039129, 0.039355, 0.039582, 0.039811, 
-    0.040041, 0.040272, 0.040504, 0.040738, 0.040973, 0.041210, 0.041448, 0.041687, 
-    0.041928, 0.042170, 0.042413, 0.042658, 0.042904, 0.043152, 0.043401, 0.043652, 
-    0.043904, 0.044157, 0.044412, 0.044668, 0.044926, 0.045186, 0.045446, 0.045709, 
-    0.045973, 0.046238, 0.046505, 0.046774, 0.047044, 0.047315, 0.047588, 0.047863, 
-    0.048139, 0.048417, 0.048697, 0.048978, 0.049261, 0.049545, 0.049831, 0.050119, 
-    0.050408, 0.050699, 0.050992, 0.051286, 0.051582, 0.051880, 0.052180, 0.052481, 
-    0.052784, 0.053088, 0.053395, 0.053703, 0.054013, 0.054325, 0.054639, 0.054954, 
-    0.055271, 0.055590, 0.055911, 0.056234, 0.056559, 0.056885, 0.057214, 0.057544, 
-    0.057876, 0.058210, 0.058546, 0.058884, 0.059224, 0.059566, 0.059910, 0.060256, 
-    0.060604, 0.060954, 0.061306, 0.061660, 0.062015, 0.062373, 0.062734, 0.063096, 
-    0.063460, 0.063826, 0.064195, 0.064565, 0.064938, 0.065313, 0.065690, 0.066069, 
-    0.066451, 0.066834, 0.067220, 0.067608, 0.067999, 0.068391, 0.068786, 0.069183, 
-    0.069582, 0.069984, 0.070388, 0.070795, 0.071203, 0.071614, 0.072028, 0.072444, 
-    0.072862, 0.073282, 0.073706, 0.074131, 0.074559, 0.074989, 0.075422, 0.075858, 
-    0.076296, 0.076736, 0.077179, 0.077625, 0.078073, 0.078524, 0.078977, 0.079433, 
-    0.079891, 0.080353, 0.080816, 0.081283, 0.081752, 0.082224, 0.082699, 0.083176, 
-    0.083657, 0.084140, 0.084625, 0.085114, 0.085605, 0.086099, 0.086596, 0.087096, 
-    0.087599, 0.088105, 0.088614, 0.089125, 0.089640, 0.090157, 0.090678, 0.091201, 
-    0.091728, 0.092257, 0.092790, 0.093325, 0.093864, 0.094406, 0.094951, 0.095499, 
-    0.096051, 0.096605, 0.097163, 0.097724, 0.098288, 0.098855, 0.099426, 0.100000, 
-    0.100577, 0.101158, 0.101742, 0.102329, 0.102920, 0.103514, 0.104112, 0.104713, 
-    0.105317, 0.105925, 0.106537, 0.107152, 0.107771, 0.108393, 0.109018, 0.109648, 
-    0.110281, 0.110917, 0.111558, 0.112202, 0.112850, 0.113501, 0.114156, 0.114815, 
-    0.115478, 0.116145, 0.116815, 0.117490, 0.118168, 0.118850, 0.119536, 0.120226, 
-    0.120921, 0.121619, 0.122321, 0.123027, 0.123737, 0.124451, 0.125170, 0.125893, 
-    0.126619, 0.127350, 0.128086, 0.128825, 0.129569, 0.130317, 0.131069, 0.131826, 
-    0.132587, 0.133352, 0.134122, 0.134896, 0.135675, 0.136458, 0.137246, 0.138038, 
-    0.138835, 0.139637, 0.140443, 0.141254, 0.142069, 0.142889, 0.143714, 0.144544, 
-    0.145378, 0.146218, 0.147062, 0.147911, 0.148765, 0.149624, 0.150487, 0.151356, 
-    0.152230, 0.153109, 0.153993, 0.154882, 0.155776, 0.156675, 0.157580, 0.158489, 
-    0.159404, 0.160325, 0.161250, 0.162181, 0.163117, 0.164059, 0.165006, 0.165959, 
-    0.166917, 0.167880, 0.168850, 0.169824, 0.170805, 0.171791, 0.172783, 0.173780, 
-    0.174783, 0.175792, 0.176807, 0.177828, 0.178855, 0.179887, 0.180926, 0.181970, 
-    0.183021, 0.184077, 0.185140, 0.186209, 0.187284, 0.188365, 0.189452, 0.190546, 
-    0.191646, 0.192752, 0.193865, 0.194984, 0.196110, 0.197242, 0.198381, 0.199526, 
-    0.200678, 0.201837, 0.203002, 0.204174, 0.205353, 0.206538, 0.207730, 0.208930, 
-    0.210136, 0.211349, 0.212569, 0.213796, 0.215030, 0.216272, 0.217520, 0.218776, 
-    0.220039, 0.221309, 0.222587, 0.223872, 0.225165, 0.226464, 0.227772, 0.229087, 
-    0.230409, 0.231739, 0.233077, 0.234423, 0.235776, 0.237137, 0.238506, 0.239883, 
-    0.241268, 0.242661, 0.244062, 0.245471, 0.246888, 0.248313, 0.249747, 0.251189, 
-    0.252639, 0.254097, 0.255564, 0.257040, 0.258523, 0.260016, 0.261517, 0.263027, 
-    0.264545, 0.266073, 0.267609, 0.269153, 0.270707, 0.272270, 0.273842, 0.275423, 
-    0.277013, 0.278612, 0.280221, 0.281838, 0.283465, 0.285102, 0.286748, 0.288403, 
-    0.290068, 0.291743, 0.293427, 0.295121, 0.296825, 0.298538, 0.300262, 0.301995, 
-    0.303739, 0.305492, 0.307256, 0.309030, 0.310814, 0.312608, 0.314413, 0.316228, 
-    0.318053, 0.319890, 0.321736, 0.323594, 0.325462, 0.327341, 0.329230, 0.331131, 
-    0.333043, 0.334965, 0.336899, 0.338844, 0.340800, 0.342768, 0.344747, 0.346737, 
-    0.348739, 0.350752, 0.352777, 0.354813, 0.356862, 0.358922, 0.360994, 0.363078, 
-    0.365174, 0.367282, 0.369403, 0.371535, 0.373680, 0.375837, 0.378007, 0.380189, 
-    0.382384, 0.384592, 0.386812, 0.389045, 0.391291, 0.393550, 0.395822, 0.398107, 
-    0.400405, 0.402717, 0.405042, 0.407380, 0.409732, 0.412098, 0.414477, 0.416869, 
-    0.419276, 0.421697, 0.424131, 0.426580, 0.429042, 0.431519, 0.434010, 0.436516, 
-    0.439036, 0.441570, 0.444120, 0.446684, 0.449262, 0.451856, 0.454465, 0.457088, 
-    0.459727, 0.462381, 0.465050, 0.467735, 0.470435, 0.473151, 0.475883, 0.478630, 
-    0.481393, 0.484172, 0.486968, 0.489779, 0.492606, 0.495450, 0.498310, 0.501187, 
-    0.504081, 0.506991, 0.509918, 0.512861, 0.515822, 0.518800, 0.521795, 0.524807, 
-    0.527837, 0.530884, 0.533949, 0.537032, 0.540132, 0.543250, 0.546387, 0.549541, 
-    0.552713, 0.555904, 0.559114, 0.562341, 0.565588, 0.568853, 0.572137, 0.575440, 
-    0.578762, 0.582103, 0.585464, 0.588844, 0.592243, 0.595662, 0.599101, 0.602560, 
-    0.606038, 0.609537, 0.613056, 0.616595, 0.620155, 0.623735, 0.627336, 0.630957, 
-    0.634600, 0.638263, 0.641948, 0.645654, 0.649382, 0.653131, 0.656901, 0.660693, 
-    0.664508, 0.668344, 0.672202, 0.676083, 0.679986, 0.683912, 0.687860, 0.691831, 
-    0.695825, 0.699842, 0.703882, 0.707946, 0.712033, 0.716143, 0.720278, 0.724436, 
-    0.728618, 0.732825, 0.737055, 0.741310, 0.745590, 0.749894, 0.754223, 0.758578, 
-    0.762957, 0.767361, 0.771792, 0.776247, 0.780728, 0.785236, 0.789769, 0.794328, 
-    0.798914, 0.803526, 0.808165, 0.812831, 0.817523, 0.822243, 0.826990, 0.831764, 
-    0.836566, 0.841395, 0.846253, 0.851138, 0.856052, 0.860994, 0.865964, 0.870964, 
-    0.875992, 0.881049, 0.886135, 0.891251, 0.896396, 0.901571, 0.906776, 0.912011, 
-    0.917276, 0.922571, 0.927897, 0.933254, 0.938642, 0.944061, 0.949511, 0.954993, 
-    0.960506, 0.966051, 0.971628, 0.977237, 0.982879, 0.988553, 0.994260, 1.000000, 
-};
+FLOAT_T sb_vol_table[1024];
 
+void init_sb_vol_table(void)
+{
+	int i;
+	
+	for (i = 0; i < 1024; i++)
+		sb_vol_table[i] = 1 / pow(10.0, (1023 - i) / 400.0);
+}
 
 FLOAT_T cb_to_amp_table[961] = 
 {
